Added a bit more cheeky commentary.

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -457,7 +457,8 @@
     "\n",
     "### The sad stuff\n",
     "1. We can see that the min age is 0, unless a new born has a credit history (highly unlikely), we have missing or noisy data.\n",
-    "2. Number of Dependents and MonthlyIncome is also missing for a substantial amount of records. We might have to explore imputation methods."
+    "2. Number of Dependents and MonthlyIncome is also missing for a substantial amount of records. We might have to explore imputation methods.\n",
+    "3. SeriousDlqin2yrs 75% is still 0, this means the dataset is highly skewed, with a very minor chunk actually high risk. Realistic as not 50% of the real world population is high risk but we need to consider this in our modelling. Well, there goes accuracy as a metric."
    ]
   }
  ],
